# data-analysis-crow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fh-finch-synapse-agent.py  pyproject.toml  requirements.txt  run_crow_job.py
.github/workflows/: tests.yml
src/: __init__.py  pyproject.toml
src/app/: config.py  data_analysis_env.py  dataset.py  dev.yaml  models.py  notebook_env.py  prompts.py  utils.py
src/app/storage/data-analysis-input-data/: data.csv
src/expts/: client.py  common.py  dsbench.py  eval.py  server.py  training.py
src/fhda/: Dockerfile.custom_deployment  Dockerfile.pinned  __init__.py  config.py  data_analysis_env.py  kernel_requirements.txt  models.py  notebook_env.py  prompts.py  storage.py  tortoise.py  utils.py
src/fhda/templates/lab/: index.html.j2
src/fhda/templates/lab/static/: index.css
src/scripts/: config.py  configurable.py  deploy.py  expt_logging.py  logging.py  platform_eval.py  platform_run_jobs.py
src/scripts/bixbench_evaluation/: run.sh  runner.yaml  server.yaml
tests/: test_nb_env.py
tutorial/: consensus.ipynb  example.ipynb  multi_agent_orchestration.ipynb  platform_api.ipynb
tutorial/tmp_results_dir/bf222a115d3970be6e12430b1cd57eb67d2f36b1950ed5765a247a1f071e7569-1740969537.698443/: notebook.ipynb  notebook.md
tutorial/tmp_results_dir/bf222a115d3970be6e12430b1cd57eb67d2f36b1950ed5765a247a1f071e7569-1740969704.2065432/: notebook.ipynb  notebook.md
tutorial/tmp_results_dir/bf222a115d3970be6e12430b1cd57eb67d2f36b1950ed5765a247a1f071e7569-1741036231.876748/: claude-3-7.html  notebook.ipynb  notebook.md
tutorial/tmp_results_dir/bf222a115d3970be6e12430b1cd57eb67d2f36b1950ed5765a247a1f071e7569-1741036365.66959/: claude-3-7.html  notebook.ipynb  notebook.md
