[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64"]

[project]
authors = [
  {email = "hello@futurehouse.org", name = "FutureHouse technical staff"}
]
dependencies = [
  "aiodocker==0.24.0",
  "fhaviary[server]==0.19.0",
  "ldp>=0.26.0",
  "pandas==2.2.3",
  "numpy==2.2.3",
  "matplotlib==3.10.0",
  "scipy==1.15.2",
  "seaborn==0.13.2",
  "scikit-learn==1.6.1",
  "statsmodels==0.14.4",
  "aiofiles==24.1.0",
  "google-auth==2.38.0",
  "google-cloud-storage==3.0.0",
  "google-cloud-secret-manager==2.23.0",
  "futurehouse-client>=0.3.14",
  "jupyter==1.1.1",
  "nbconvert==7.16.6",
  "notebook==7.3.2",
  "nbformat==5.10.4",
  "pydeseq2==0.5.0"
]
description = "Data analysis crow"
name = "fhda"
requires-python = ">=3.12"
version = "1.0.0"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff"
]

[project.scripts]
run_expt = 'scripts.configurable:_run_expt'

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
