[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64"]

[project]
authors = [
  {email = "hello@futurehouse.org", name = "FutureHouse technical staff"}
]
dependencies = [
  "aiodocker==0.24.0",
  "anthropic==0.52.2", # this is necessary for tortoise, remove in favor of LMI when it works with search
  "fhaviary[server]==0.19.0",
  "ldp==0.26.0",
  "pandas==2.2.3",
  "numpy==2.2.3",
  "matplotlib==3.10.0",
  "aiofiles==24.1.0",
  "google-auth==2.38.0",
  "google-cloud-storage==3.0.0",
  "google-cloud-secret-manager==2.23.0",
  "futurehouse-client==0.3.19",
  "jupyter==1.1.1",
  "nbconvert==7.16.6",
  "notebook==7.3.2",
  "nbformat==5.10.4",
  "seaborn==0.13.2"
]
description = "Data analysis crow"
name = "fhda"
requires-python = ">=3.12"
version = "1.0.0"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff"
]

[project.scripts]
run_expt = 'scripts.configurable:_run_expt'

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
